<resources>
    <string name="app_name">BeMan</string>

    <string name="line_activity_login">Pleasing your girlfriend is as easy as 1+2=3.</string>
    <string name="line_activity_slogan">Your clever relationship wingman.</string>
    <string name="line_fragment_welcome">is your clever relationship wingman.</string>
    <string name="line_fragment_welcome2">The team has came to rescue busy Bros who usually forget texting their girl by automatically messaging your darling.</string>
    <string name="line_fragment_welcome3">Swipe to get started</string>
    <string name="line_fragment_info1">Guide us how to call you</string>
    <string name="line_fragment_info2">Please guide us how to call you.</string>
    <string name="line_fragment_info2C"> Your real name, nick name, alias is good choice. Leave the field empty if you still want to be called Bro</string>
    <string name="line_fragment_number">%1$s, who\'s your girlfriend?</string>
    <string name="line_fragment_infoNumberC">We need your girlfriend\'s number to begin.</string>
    <string name="line_fragment_number_button">My girlfriend\'s number is &#8230;</string>
    <string name="line_fragment_info_result1">From now on, we\'ll call you %1$s</string>
    <string name="line_fragment_wifi1">%1$s, where abouts?</string>
    <string name="line_fragment_wifi2">So we don\'t message your girlfriend inappropriately, what are your Work, Home and Girlfriend\'s Home Wifi access points?</string>
    <string name="line_fragment_info_result2">We will send SMS messages to %1$s at %2$s</string>
    <string name="line_fragment_days">%1$s, which days?</string>
    <string name="line_fragment_days1">BeMan will send message to your girlfriend on these times</string>
    <string name="line_fragment_days_selected_all">Wow, ambitious! You\'ll be getting love every day of the week</string>
    <string name="line_fragment_days_selected_not_all">We\'ll send messages every </string>
    <string name="line_fragment_message_list">%1$s, select and edit messages</string>
    <string name="line_fragment_message_list1">Tap a message to edit. Tap + to write your own.</string>
    <string name="line_moment_confirm">%1$s, Are you sure to plan this schedule?</string>
    <string name="line_fragment_gps1">%1$s, where about</string>
    <string name="logo_activity_login_description">BeMan</string>
    <string name="hint_activity_login">Enter your pin</string>
    <string name="hint_action_name">Enter your name</string>

    <string name="wifi_work">Work</string>
    <string name="wifi_home">Home</string>
    <string name="wifi_girl_home">Girl\'s House</string>
    <string name="wifi_custom">Custom</string>
    <string name="wifi_select">Select</string>
    <string name="wifi_none">None</string>
    
    <string name="gps1"> If there is not a wifi access location at that place, you can use gps at:</string>
    <string name="gps_home">Home</string>
    <string name="gps_work">Work</string>
    <string name="gps_girl_home">Girl\'s house</string>


    <string name="day_morning">Morning</string>
    <string name="day_noon">Noon</string>
    <string name="day_afternoon">Afternoon</string>
    <string name="day_evening">Evening</string>
    <string name="day_night">Night</string>

    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>

    <string name="dialog_message">Message:</string>
    <string name="dialog_choose_days">Only send on these days</string>
    <string name="dialog_title">BeMan Message</string>
    <string name="dialog_action_save">Save</string>
    <string name="dialog_action_cancel">Cancel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bm__be_men_mode">BM_BeMenMode</string>
    <string name="title_activity_bm_g_irlm_ode">bm_gIRLmODE</string>
    <string name="title_activity_bm__girl_mode">BM_GirlMode</string>
    <string name="title_activity_bm__wrong_pass">BM_WrongPass</string>
    <string name="max_length_of_pin">4</string>
    <string name="title_activity_bm__activity_show_schedule">BM_ActivityShowSchedule</string>
    <string name="title_activity_bm_activity_message_list">ActivityMessageList</string>
    <string name="title_activity_bm__activity_message_list">ActivityMessageList</string>

    <string name="action_add_items">"Add item"</string>

    <string name="time_morning">Morning</string>
    <string name="time_noon">Noon</string>
    <string name="time_afternoon">Afternoon</string>
    <string name="time_evening">Evening</string>
    <string name="time_night">Night</string>
    <string name="title_activity_bm__activity_setting">BM_ActivitySetting</string>
    <string name="checkbox_login">Enable login</string>
    <string name="title_activity_advertisement">Advertisement</string>
    <string name="title_activity_bm__activity_login">BM_ActivityLogin</string>
    <string name="title_activity_bm__activity_manage_wifi">Manage Wifi</string>
    <string name="title_activity_bm__activity_simple_setup">BM_ActivitySimpleSetup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="girl_mode_title">Suggested Gift</string>
    <string name="girl_mode_title2">for your Girl</string>
    <string name="girl_mode_gift_title_1">Flower</string>
    <string name="girl_mode_gift_desc_1">Rose</string>
    <string name="girl_mode_gift_title_2">Movie</string>
    <string name="girl_mode_gift_desc_2">Gravity Falls</string>
    <string name="girl_mode_gift_title_3">Jewelry</string>
    <string name="girl_mode_gift_desc_3">Ring</string>
    <string name="girl_mode_gift_title_4">Cake</string>
    <string name="girl_mode_gift_desc_4">Banh mi trung</string>
    <string name="girl_mode_gift_title_5">Picnic</string>
    <string name="girl_mode_gift_desc_5">Hoan Kiem Lake</string>
    <string name="title_activity_bm__base">BM_BaseActivity</string>

    <string name="reply_checkbox">Auto reply</string>

</resources>