<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dip">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        style="@style/text_dialog"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_button_padding_horizontal_material" />

    <EditText
        android:id="@+id/dialog_message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:lines="3"
        android:gravity="top"
        android:hint="Your message"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_button_padding_horizontal_material" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_choose_days"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        style="@style/text_dialog"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <ToggleButton
            android:id="@+id/dialog_monBtn"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/circle_day_button"
            android:textOff="@string/day_mon"
            android:textOn="@string/day_mon"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="8dp"
            style="@style/days_button"
            />

        <ToggleButton
            android:id="@+id/dialog_tueBtn"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/circle_day_button"
            android:textOff="@string/day_tue"
            android:textOn="@string/day_tue"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="8dp"
            style="@style/days_button"
            />

        <ToggleButton
            android:id="@+id/dialog_wedBtn"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/circle_day_button"
            android:textOff="@string/day_wed"
            android:textOn="@string/day_wed"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="8dp"
            style="@style/days_button"
            />

        <ToggleButton
            android:id="@+id/dialog_thuBtn"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/circle_day_button"
            android:textOff="@string/day_thu"
            android:textOn="@string/day_thu"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="8dp"
            style="@style/days_button"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <ToggleButton
            android:id="@+id/dialog_friBtn"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/circle_day_button"
            android:textOff="@string/day_fri"
            android:textOn="@string/day_fri"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="8dp"
            style="@style/days_button"
            />

        <ToggleButton
            android:id="@+id/dialog_satBtn"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/circle_day_button"
            android:textOff="@string/day_sat"
            android:textOn="@string/day_sat"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="8dp"
            style="@style/days_button"
            />

        <ToggleButton
            android:id="@+id/dialog_sunBtn"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:background="@drawable/circle_day_button"
            android:textOff="@string/day_sun"
            android:textOn="@string/day_sun"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_margin="8dp"
            style="@style/days_button"
            />
    </LinearLayout>

</LinearLayout>