<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_yellow_500"
    android:layout_gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingBottom="35dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo1"
                android:id="@+id/logoSplash"
                android:contentDescription="@string/logo_activity_login_description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/line_fragment_welcome"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_body_2_material"
                android:layout_gravity="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_body_2_material" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/line_fragment_welcome2"
                 />

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_fragment_welcome3"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>

