<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_yellow_500"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_vertical|center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:id="@+id/layout_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_vertical"
            android:layout_centerInParent="true"
            android:paddingLeft="35dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_display_1_material"
                android:text="@string/line_fragment_wifi1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_body_2_material" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_fragment_wifi2"
                android:textSize="@dimen/abc_text_size_body_2_material" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_headline_material" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:paddingBottom="35dp"
            android:layout_below="@id/layout_number">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_home"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:id="@+id/text_view_home_wifi"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/switch_home_wifi"
                android:layout_toStartOf="@+id/switch_home_wifi" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_home_wifi"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/text_view_home_wifi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_work"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:id="@+id/text_view_work_wifi"
                android:layout_below="@id/text_view_home_wifi"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/switch_work_wifi"
                android:layout_toStartOf="@+id/switch_work_wifi" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_work_wifi"
                android:layout_alignTop="@+id/text_view_work_wifi"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/text_view_work_wifi"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_girl_home"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:id="@+id/text_view_girl_wifi"
                android:layout_below="@+id/text_view_work_wifi"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_girl_wifi"
                android:layout_alignTop="@+id/text_view_girl_wifi"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/text_view_girl_wifi"
                android:singleLine="true" />

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/line_fragment_info_result2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>